# rare-disease-identification

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: deploy.yml
site/: index.html
site/css/: style.css
site/js/: app.js
src/rare_disease_identification/: build_drugs.py  extract-from-excel-old.py  merge.py  update_mondo_categories.py
src/rare_disease_identification/datamodel/: rare_disease_prioritisation.py
src/rare_disease_identification/schema/: mondo_drugs.yaml  rare_disease_prioritisation.yaml
